    (Closes: #800043)
  * dh_installinit: Deprecate --no-restart-on-upgrade in favor of the new
    name --no-stop-on-upgrade, which does the same thing but is less
    likely to be confused with --no-restart-after-upgrade and is more
    descriptive of what it actually does.  Thanks to  Simon McVittie and
    Michael Biebl for the help.  (Closes: #837528)

  [ Steven Chamberlain ]
  * When cross-compiling for GNU/kFreeBSD host systems, set
    CMAKE_SYSTEM_NAME to the correct value "kFreeBSD", not "FreeBSD".
    (Closes: #856688)

  [ Felipe Sateler ]
  * dh_systemd_enable.1: Improve the wording of the documentation for
    the --no-enable option.  (Closes: #844602)

  [ Michael Biebl ]
  * Add support for meson + ninja build systems.  (Closes: #795253)

  [ Michael Stapelberg ]
  * dh_missing: New tool to handle --list-missing/--fail-missing.
    (Closes: #415396)
  * Dh_Lib.pm: Introduce a log_installed_files sub that can be used
    to inform dh_missing that a given file has been installed.

 -- Helmut Grohne <helmut@subdivi.de>  Sat, 18 Feb 2017 17:49:08 +0000

debhelper (10.2.5) unstable; urgency=medium

  [ Translations ]
  * Add Japanese translation (Hideki Yamane)  (Closes: #852520)

 -- Niels Thykier <niels@thykier.net>  Wed, 25 Jan 2017 20:47:27 +0000

debhelper (10.2.4) unstable; urgency=medium

  [ Niels Thykier ]
  * d/changelog: Add missing changelog entry in 10.2.3 for a
    compat 11 change.
  * dh: Show when the "create-stamp" "command" is being run.
  * dh: Fix a bug where dh would repeat part of the build sequence
    when an add-on modified the build sequence after "dh_auto_test".
    Thanks to Sean Whitton for reporting the issue.
    (Closes: #851071)

  [ Luca Boccassi ]
  * dh_systemd_enable: Correct installation for "mount" units.
    (Closes: #851744)

  [ Translations ]
  * Update Portuguese translation (Américo Monteiro)
    (Closes: #851207)
  * Update French translation (Baptiste Jammet)  (Closes: #852211)