@@ -6,12 +6,15 @@
 # to ensure that the commands and libraries in the source tree are used,
 # rather than the installed ones.
 #
-# We use --no-parallel because the test suite is not thread safe.
 # We disable autoreconf to avoid build-depending on it (it does
 # nothing for debhelper and it keeps the set of B-D smaller)
 
 %:
-	./run dh $@ --no-parallel --without autoreconf --with build-stamp
+	./run dh $@ --without autoreconf --with build-stamp
+
+# The tests fail when run in parallel
+override_dh_auto_test:
+	./run dh_auto_test --no-parallel
 
 # Disable as they are unneeded (and we can then be sure debhelper
 # builds without needing autotools-dev, dh-strip-nondetermism etc.)
