@@ -27,6 +27,8 @@ debhelper (10.3) UNRELEASED; urgency=medium
     likely to be confused with --no-restart-after-upgrade and is more
     descriptive of what it actually does.  Thanks to  Simon McVittie and
     Michael Biebl for the help.  (Closes: #837528)
+  * debian/rules: Only apply the --no-parallel to dh_auto_test.  The rest
+    of debhelper's build appears to work fine with --parallel.
 
   [ Steven Chamberlain ]
   * When cross-compiling for GNU/kFreeBSD host systems, set
